--- a/src/pages/login/index.scoped.scss
+++ b/src/pages/login/index.scoped.scss
@@ -1,4 +1,7 @@
-.board-row button {
-	width: 51px;
-	height: 42px;
+.board-row {
+	display: flex;
+	button {
+		width: 51px;
+		height: 42px;
+	}
 }
